--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .gpii-prefsEditor-preferenceGroup {
-    background:#ECEFEF;
+    background:#e7f1ef;
     width: 340px;
     //min-height: 100px;
 }
@@ -439,8 +439,20 @@ input[type=checkbox], input[type=radio] {
     margin-top: -1em;
 }
 
+.gpii-prefsEditor-previewPerSettingFrame-small {
+	height: 80px;
+}
+
+.gpii-prefsEditor-previewPerSettingFrame-medium {
+	height: 120px;
+}
+
+.gpii-prefsEditor-previewPerSettingFrame-large {
+	height: 150px;
+}
+
 .gpii-prefsEditor-previewPerSettingContainer {
-    background-color: #d3dfdf;
+    background-color: white;
     border: 1px solid #beced1;
     color: #B8C9CC;
     font-size: 2em;
@@ -598,7 +610,7 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
 
 .gpii-prefsEditor-theme-default {
     color: black;
-    background-color: #D3DFDF;
+    background-color: white;
 }
 
 .gpii-prefsEditor-theme-yb .gpii-prefsEditor-headerImage {
