Some styling on iconCheckAdjuster.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -732,6 +732,7 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 	cursor: pointer;
 	display: block;
 	background-color: white;
+	margin: 2px;
 }
 
 .gpii-iconCheckAdjusterDescription {
