Corrected a capitalization bug.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -55,6 +55,10 @@ body {
     text-transform: capitalize;
 }
 
+.gpii-prefsEditor label {
+    text-transform: none !important;
+}
+
 .gpii-uiOptions .headerTitle::first-letter {
     text-transform: lowercase;
 }
