GPII-271: Animation for VisualAlternatives complete, altogether with adding appropriate names for the events.

--- a/src/shared/adjusters/pcp/css/style.css
+++ b/src/shared/adjusters/pcp/css/style.css
@@ -114,6 +114,14 @@ textarea:focus, input:focus {
     display: none;
 }
 
+.gpii-volume-partially-expanded {
+    /*display: none;*/
+}
+
+.gpii-speakText-fully-expanded {
+    display: none;
+}
+
 .gpii-speakText-switch {
     font-size:135%;
     float: left;
