--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -808,3 +808,25 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 .gpii-iconCheckAdjusterAreaBottomOnlyBorder {
 	border-radius: 0px 0px 5px 5px !important;
 }
+
+/*
+    Style for contrastTheme adjuster
+*/
+.gpii-contrastThemeLabel {
+	font-size: 1.5em !important;
+	border: 2px solid #000000 !important;
+	border-radius: 0 !important;
+	margin-right: 20px !important;
+	padding: 0px !important;
+	height: 3em !important;
+	width: 3em !important;
+	cursor: pointer;
+}
+
+.fl-prefsEditor .fl-choice label {
+	line-height: 3em !important;
+}
+
+.gpii-contrastThemeIndicator {
+	margin: 0 0 0 1.5em !important;
+}
