--- a/src/shared/adjusters/pcp/css/style.css
+++ b/src/shared/adjusters/pcp/css/style.css
@@ -106,7 +106,11 @@ textarea:focus, input:focus {
 }
 
 .gpii-volume-partially-expanded {
-    /*display: none;*/
+    display: none;
+}
+
+.gpii-language-partially-expanded {
+    display: none;
 }
 
 .gpii-speakText-fully-expanded {
