--- a/src/shared/adjusters/pcp/css/style.css
+++ b/src/shared/adjusters/pcp/css/style.css
@@ -1,19 +1,19 @@
 @font-face {
+    font-family: 'allIcons';
+    src: url('../fonts/allIcons.ttf') format('truetype'),
+         url('../fonts/allIcons.eot');
+}
+
+@font-face {
+    font-family: 'headerGear';
+    src: url('../fonts/headerGear.ttf') format('truetype'),
+         url('../fonts/headerGear.eot');
+}
+
+@font-face {
     font-family: 'radioButtonIcons';
     src: url('../fonts/blackDot.ttf') format('truetype'),
          url('../fonts/blackDot.eot');
-}
-
-@font-face {
-    font-family: 'optionsIcons';
-    src: url('../fonts/icomoon.ttf') format('truetype'),
-         url('../fonts/icomoon.eot');
-}
-
-@font-face {
-    font-family: 'presetButtonPackage';
-    src: url('../fonts/presetButton.ttf') format('truetype'),
-         url('../fonts/presetButton.eot');
 }
 
 @font-face {
@@ -307,24 +307,31 @@ input[type=checkbox] + label.gpii-speakText-checkboxLabel {
     content: "\e00d";
 }
 
-.white-baloon-icon {
-    position: absolute;
-    font-family: 'presetButtonPackage';
-}
-
-.white-baloon-icon:before {
-    content: "\e004";
+.main-icon:before {
+    font-family: 'allIcons';
     position: absolute;
     z-index: 4;
-    margin-top: 7px;
+    margin-top: 5px;
     margin-left: 7px;
-    font-size: 70px;
+    font-size: 80px;
     color: white;
+}
+
+.visualAlternatives-main-icon:before {
+    content: "\e004";
+}
+
+.volume-main-icon:before {
+    content: "\e00e";
+}
+
+.language-main-icon:before {
+    content: "\e010";
 }
 
 .white-tick-icon {
     display: none;
-    font-family: 'presetButtonPackage';
+    font-family: 'headerGear';
 }
 
 .white-tick-icon:before {
@@ -343,12 +350,14 @@ input[type=checkbox] + label.gpii-speakText-checkboxLabel {
 input[type=checkbox] + label.preset-button-label {
     z-index: 2;
     position: absolute;
-    padding-left: 125px;
+    padding-left: 90px;
     padding-top: 33px;
     color: white;
-    background-color: #556273;
-    width: 200px;
+    background-color: rgb(85, 98, 115);
+    width: 236px;
     height: 60px;
+    text-align: left;
+    font-size: 1.3em;
 }
 
 input[type=checkbox] + label.gpii-speakText-checkboxLabel {
@@ -567,7 +576,7 @@ div.ui-tooltip-content: {
 }
 
 .fl-adjuster-icons-additional {
-    font-family: 'presetButtonPackage';
+    font-family: 'headerGear';
 }
 
 .addToMyPreferencesStar:before {
