Implemented the "preferences saved to usb" message (without token intervention).

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -112,7 +112,9 @@ body {
 .gpii-prefsEditor-messageLine {
 	display: table-cell;
 	white-space: normal;
-	width: 50%;
+	width: 55%;
+	font-style:italic;
+	vertical-align: middle;
 }
 
 .gpii-prefsEditor-saveButtonContainer {
