Working on jQuery dialog modal notification.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -151,3 +151,9 @@ body {
 	font-weight: bold;
 	cursor: pointer;
 }
+
+.gpii-prefsEditor-notificationMessageTOKEN {
+	color: white;
+	background-color: #666666;
+	padding: 0 5px 0 5px;
+}
