Som styling on confirmation Dialog.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -125,7 +125,7 @@ body {
 }
 
 .gpii-prefsEditor-notification {
-	background-color: black !important;
+	background-color: #333333 !important;
 	color: white !important;
 }
 
