--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -59,7 +59,7 @@ h2 {
 
 h2 > label {
     width: 240px !important;
-    word-wrap: break-word;    
+    word-wrap: break-word;
 }
 
 /*
@@ -70,7 +70,7 @@ h2 > label {
     width: 330;
     margin:5px !important;
     color: white;
-    background-color: #566374;    
+    background-color: #566374;
     position: absolute;
 }
 
@@ -110,7 +110,7 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 
 .gpii-prefsEditor-headerTitle {
     font-family: 'Roboto Slab', serif;
-    left: 0; 
+    left: 0;
     width: 100%;
     color: white;
     text-align: left;
@@ -208,9 +208,15 @@ input[type=checkbox], input[type=radio] {
 }
 
 /*
-    The plusMinusAdjuster style
+    The textfieldStepper style
 */
-.gpii-increaseSize-plusMinusNumericalMinus, .gpii-increaseSize-plusMinusNumericalPlus {
+.gpii-stepper {
+    width: 100% !important;
+    background-color: #FFFFFF;
+    display: table;
+}
+
+.gpii-stepper-buttons {
     width: 10% !important;
     font-size: 1.5em !important;
     cursor: pointer;
@@ -227,14 +233,8 @@ input[type=checkbox], input[type=radio] {
     float: left;
 }
 
-.gpii-increaseSize-plusMinusNumericalWidget {
-    width: 100% !important;
-    background-color: #FFFFFF;
-    display: table;
-}
-
-.gpii-increaseSize-plusMinusNumericalValue {
-    width: 76% !important;
+.gpii-stepper-valueField {
+    width: 66% !important;
     border: none !important;
     text-align: center !important;
     font-size: 1.5em !important;
@@ -242,8 +242,11 @@ input[type=checkbox], input[type=radio] {
     margin-bottom: 2px !important;
 }
 
-.gpii-increaseSize-plusMinusNumericalMinReached {
-    color: #D3D3D3 !important;
+.gpii-stepper-unit {
+    float: left;
+    width: 10% !important;
+    text-align: center !important;
+    font-size: 1.5em !important;
 }
 
 /*
@@ -308,7 +311,7 @@ input[type=checkbox], input[type=radio] {
     font-size: 4.8em !important;
     content: "\e00b" !important;
 }
-    
+
 .gpii-increaseSize-magnifierPositionFullscreen > .gpii-increaseSize-magnifierPositionFrame:before {
     font-size: 5em !important;
     content: "\e008" !important;
@@ -316,7 +319,7 @@ input[type=checkbox], input[type=radio] {
 
 .gpii-increaseSize-magnifierPositionLens > .gpii-increaseSize-magnifierPositionIcon:before {
     content: "\e00a";
-} 
+}
 
 .gpii-increaseSize-magnifierPositionFullscreen > .gpii-increaseSize-magnifierPositionIconMain {
     opacity:0.5;
@@ -479,29 +482,29 @@ input:checked + .gpii-increaseSize-magnifierFollowsLabel > .gpii-increaseSize-ma
 }
 
 .gpii-prefsEditor-previewPerSettingDiv {
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
-.gpii-prefsEditor-previewPerSettingDivInner { 
-    position: absolute; 
-    display: table; 
-    width: 100%; 
-    height: 100%; 
+.gpii-prefsEditor-previewPerSettingDivInner {
+    position: absolute;
+    display: table;
+    width: 100%;
+    height: 100%;
 }
 
 .gpii-prefsEditor-previewPerSettingDivInner p {
-    display: table-cell; 
-    vertical-align: middle; 
-    text-align: center; 
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
     padding: 10px;
 }
 
 .gpii-prefsEditor-previewPerSettingDivInner div {
-    display: table-cell; 
-    vertical-align: middle; 
-    text-align: center; 
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
     padding: 10px;
     float: none;
 }
@@ -661,7 +664,7 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     border: 1px solid !important;
 }
 
-.gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalValue {
+.gpii-prefsEditor-theme-yb .gpii-stepper-valueField {
     margin-bottom: 1px !important;
 }
 
@@ -673,7 +676,7 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
     outline: none !important;
 }
 
-.gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalValue:focus, .gpii-prefsEditor-theme-yb .gpii-increaseSize-plusMinusNumericalValue *:focus, .gpii-prefsEditor-theme-yb.gpii-increaseSize-plusMinusNumericalValue *:focus, .gpii-prefsEditor-theme-yb .selectable {
+.gpii-prefsEditor-theme-yb .gpii-stepper-valueField:focus, .gpii-prefsEditor-theme-yb .gpii-stepper-valueField *:focus, .gpii-prefsEditor-theme-yb.gpii-stepper-valueField *:focus, .gpii-prefsEditor-theme-yb .selectable {
     outline: 2px solid #FFFF00 !important;
 }
 
